refactor: remove deprecated (#226)
* refactor: remove deprecated methods from CounselCardController

* refactor: add default batch fetch size to Hibernate configuration

* refactor: remove deprecated methods from AICounselSummaryController

* refactor: remove unused test cases from CounselCardControllerTest